chore: Update to Java 17 and refactor some code to use Java 17 features refactor: Extract Form and CustomChart classes to improve code organization fix: Small adjustments to accessibility in Admin view